# sage

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/sage/: Cargo.toml
crates/sage/src/: main.rs
crates/sage_cli/: Cargo.toml
crates/sage_cli/src/: lib.rs
crates/sage_context/: Cargo.toml
crates/sage_context/src/: lib.rs
crates/sage_core/: Cargo.toml
crates/sage_core/src/: lib.rs
crates/sage_llm/: Cargo.toml
crates/sage_llm/src/: lib.rs
