[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.80"
repository = "https://github.com/MatthewMckee4/sage"
homepage = "https://github.com/MatthewMckee4/sage"
authors = ["Matthew McKee <matthewmckee04@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
sage_cli     = { path = "crates/sage_cli" }
sage_context = { path = "crates/sage_context" }
sage_core    = { path = "crates/sage_core" }
sage_llm     = { path = "crates/sage_llm" }

anyhow   = "1"
clap     = { version = "4", features = ["derive", "env"] }
reqwest  = { version = "0.12", features = ["json", "stream"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1", features = ["full"] }
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
